# aerobriefer

./: .gitignore  Makefile  ROADMAP.md  pyproject.toml
src/aerobriefer/: assemble.py  cli.py
src/aerobriefer/aircraft/: README.md  model.py  runway.py
src/aerobriefer/aircraft/examples/: dr400.py
src/aerobriefer/data/: airports.py  airports_eu.csv  airspace.py  fir.py  refdata.py  runways_eu.csv  runways_supplement.csv
src/aerobriefer/domain/: context.py  freshness.py  geo.py  models.py  package.py  route.py  sourced.py  window.py
src/aerobriefer/providers/: README.md  aeroweb.py  base.py  cache.py  metno.py  noaa.py  sigmet.py  sofia.py
src/aerobriefer/render/: __init__.py  html.py  pdf.py  viewer.py
src/aerobriefer/render/templates/: briefing.html.j2  viewer.html
tests/: conftest.py  test_aeroweb.py  test_aircraft.py  test_assemble.py  test_cache.py  test_domain.py  test_lint_bans_naive_datetime.py  test_metno.py  test_noaa.py  test_render.py  test_route.py  test_sigmet.py  test_sofia.py  test_viewer.py
tests/fixtures/airspace/: france.geojson
tests/fixtures/refdata/: airports_eu.csv  runways_eu.csv  runways_fr.csv
